--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
         <link rel="icon" type="image/png" href="images/favicon.ico">
-        <script src="app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r82/three.min.js"></script>
 
     </head>
 
     <body>
+        <script src="app.js"></script>
     </body>
 </html>
